--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ p{
 #form_btn{
     width: 400px;
     margin-left: 40px;
-    margin-bottom: 5%;
+    margin-top: 5%;
     font-size: 30px;
+    height:70px;
+    border: 2px #244541;
+    color:#244541;
+    cursor: pointer;
+    font-family: 'League Spartan', sans-serif;
+    
 }
+a #form_btn:hover{
+   color: white;
+   background-color: #244541;
+   }
+
