--- a/upload.css
+++ b/upload.css
@@ -14,7 +14,8 @@ nav{
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
-    padding-right: 20px;}
+    padding-right: 20px;
+    transition: margin-left .5s;}
 
 a #hamburger:hover{
     background-color:rgba(0, 0, 0, 0.1);
