--- a/upload.css
+++ b/upload.css
@@ -1,74 +1,69 @@
-body{
-    background-image: linear-gradient(90deg, #60C1B6, #B5E9E3);   
-    margin: 0%;}
-nav{
-    position: sticky;
-    background-color: #18a292;
-   border: 0%;
-   margin: 0%;
+body {
+  background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
+  margin: 0%;
 }
 
-#hamburger{
-     width: fit-content;
-     height: fit-content;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    transition: margin-left .5s;}
-
-a #hamburger:hover{
-    background-color:rgba(0, 0, 0, 0.1);
-    
-  }
-#hamburger_menu{
-    color: white;
-    content: url('https://api.iconify.design/radix-icons/hamburger-menu.svg?color=white&width=35&height=35');
-    margin: 1%;
-    cursor: pointer;
+nav {
+  position: sticky;
+  background-color: #18a292;
+  border: 0%;
+  margin: 0%;
 }
 
-#sidebar{
-    height:100%;
-    width: 20%;
-    position: fixed;
-    z-index: 1;
-    background-color: #18a292;
-    
-}
-#sidebar a{
-    padding: 5%;
-    margin-top: 10%;
-    display: block;
-    font-family: 'League spartan',sans-serif;
-    text-decoration: none;
-    font-size: larger;
-    color: white;
-    word-wrap: none;
-    }
-
-.settings{
-    width: 100%;
-}
-.settings a:hover{
- background-color: rgba(0, 0, 0, 0.1);
-}
-#cross{
-    color: white;
-    content: url('https://api.iconify.design/akar-icons/cross.svg?color=white&width=20&height=20');
-    position: absolute;
-    right: 5%;
-    cursor: pointer;}
-a #cross :hover{
-    background-color: rgba(0, 0, 0, 0.1);
+#hamburger {
+  width: fit-content;
+  height: fit-content;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  transition: margin-left 0.5s;
 }
 
-   
+a #hamburger:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+#hamburger_menu {
+  color: white;
+  content: url("https://api.iconify.design/radix-icons/hamburger-menu.svg?color=white&width=35&height=35");
+  margin: 1%;
+  cursor: pointer;
+}
 
-    
+#sidebar {
+  height: 100%;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  background-color: #18a292;
+  overflow-x: hidden;
+  transition: 0.5s;
+  
+}
+#sidebar a {
+  padding: 10px 10px 10px 10px;
+  margin-top: 25px;
+  display: block;
+  font-family: "League spartan", sans-serif;
+  text-decoration: none;
+  font-size: larger;
+  color: white;
+  transition: 0.3s;
+}
 
-
-
-
-
-
+.settings {
+  width: 100%;
+}
+.settings a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+#sidebar #cross {
+  color: white;
+  content: url("https://api.iconify.design/akar-icons/cross.svg?color=white&width=20&height=20");
+  position: absolute;
+  right: 5%;
+  cursor: pointer;
+}
+#crossicon :hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
