--- a/upload.css
+++ b/upload.css
@@ -1,6 +1,7 @@
 body {
   background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
   margin: 0%;
+  overflow-y: hidden;
 }
 
 nav {
@@ -70,3 +71,7 @@ a #hamburger:hover {
 #crossicon :hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
+#file_transfer{
+  margin-top: 7%;
+  margin-left: 7%;
+ }
