--- a/upload.css
+++ b/upload.css
@@ -75,3 +75,28 @@ a #hamburger:hover {
   margin-top: 7%;
   margin-left: 7%;
  }
+ #dropbox{
+  float: right;
+ }
+#dropbox{
+  float: right;
+  width:600px;
+  height:300px;
+  background-color: white;
+  margin-right: 10%;
+  margin-top: 3%;
+  border-radius: 35px;
+   }
+#plus{
+  margin-left: 225px;
+  margin-top: 45px;
+}
+#Droptext{
+  font-family: 'League Spartan',sans-serif;
+  font-size: 30px;
+  margin-left: 180px;
+  margin-top: 30px;
+  color: #18a292;
+  
+}
+
