--- a/style.css
+++ b/style.css
@@ -32,3 +32,20 @@ a #form_btn:hover{
    color: white;
    background-color: #244541;
    }
+   @media all and (max-width: 760px) {
+    
+    #image{
+        margin-top: 25%;
+        margin-bottom: 0.1px;
+        display: inline-flex;
+        justify-content: center;
+    }
+    img{
+        max-height:90vw ;
+        max-width:90vw ;
+         }
+         p{
+            margin-top: 10%;
+         }
+         
+   }
