--- a/upload.css
+++ b/upload.css
@@ -1,10 +1,7 @@
-@media all and (max-width:760px) {
-    
-}
 body {
   background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
   margin: 0%;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 nav {
@@ -19,7 +16,7 @@ nav {
   margin: 1%;
   cursor: pointer;
 }
-@media all and (min-width: 760px) {
+
 #hamburger {
   width: fit-content;
   height: fit-content;
@@ -108,5 +105,6 @@ a #hamburger:hover {
 #fileInput{
   display: none;
 }
+
  
 
