--- a/upload.css
+++ b/upload.css
@@ -1,7 +1,7 @@
 body {
   background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
   margin: 0%;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 nav {
@@ -105,6 +105,33 @@ a #hamburger:hover {
 #fileInput{
   display: none;
 }
+@media all and (max-width: 760px){
+  body{
+    display: block;
+  }
+ #dropbox{
+   /* visibility: hidden; */
+   max-width: 85%;
+   text-align: center;
+     }
+ #file_transfer{
+  visibility: hidden;
+ }
+ #plus{
+   text-align: center;
+   margin-left: 0%;
+}
+#Droptext{
+  font-family: 'League Spartan',sans-serif;
+  font-size: 30px;
+  margin-left: 0%;
+  margin-top: 30px;
+  color: #18a292;
+  
+}
+
+}
+  
 
  
 
