--- a/upload.css
+++ b/upload.css
@@ -2,6 +2,7 @@ body {
   background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
   margin: 0%;
   /* overflow-y: hidden; */
+  overflow-x: hidden;
 }
 
 nav {
