--- a/style.css
+++ b/style.css
@@ -1,51 +1,55 @@
-body{
-    background-image: linear-gradient(90deg, #60C1B6, #B5E9E3);
-    overflow: hidden;}
-    #illustration{
-        float: right;
-        text-align: center;
-        margin-top: -23%;
-        margin-right: 40px;
-        height: 600px; 
-        width: 600px;   
-     }  
-p{
-    font-size: 25px;
-    color: #244541;
-    font-family: 'League Spartan', sans-serif;
-    margin-left: 40px;
-    margin-top: 30%;
+/** @format */
+
+body {
+  background-image: linear-gradient(90deg, #60c1b6, #b5e9e3);
+  overflow: hidden;
 }
-#form_btn{
-    width: 400px;
-    margin-left: 40px;
-    margin-top: 5%;
-    font-size: 30px;
-    height:70px;
-    border: 2px #244541;
-    color:#244541;
-    cursor: pointer;
-    font-family: 'League Spartan', sans-serif;
-    
+#illustration {
+  float: right;
+  text-align: center;
+  margin-top: -23%;
+  margin-right: 40px;
+  height: 600px;
+  width: 600px;
 }
-a #form_btn:hover{
-   color: white;
-   background-color: #244541;
-   }
-   @media all and (max-width: 760px) {
-    
-    #image{
-        margin-top: 25%;
-        margin-bottom: 0.1px;
-        display: inline-flex;
-        justify-content: center;
-    }
-    img{
-        max-height:90vw ;
-        max-width:90vw ;
-         }
-         p{
-            margin-top: 10%;
-         }
-         
-   }
+p {
+  font-size: 25px;
+  color: #244541;
+  font-family: "League Spartan", sans-serif;
+  margin-left: 40px;
+  margin-top: 30%;
+}
+#form_btn {
+  width: 400px;
+  margin-left: 40px;
+  margin-top: 5%;
+  font-size: 30px;
+  height: 70px;
+  border: 2px #244541;
+  color: #244541;
+  cursor: pointer;
+  font-family: "League Spartan", sans-serif;
+}
+a #form_btn:hover {
+  color: white;
+  background-color: #244541;
+}
+@media all and (max-width: 760px) {
+  #image {
+    margin-top: 25%;
+    margin-bottom: 0.1px;
+    display: inline-flex;
+    justify-content: center;
+  }
+  img {
+    max-height: 90vw;
+    max-width: 90vw;
+  }
+  p {
+    margin-top: 10%;
+  }
+
+  #upload {
+    background-color: #60c1b6;
+  }
+}
