--- a/upload.css
+++ b/upload.css
@@ -166,11 +166,11 @@ a #hamburger:hover {
   color: #18a292;
   
 }
-/* .main-div{
+.main-div{
   display: inline-block;
   margin :auto;
   
-} */
+}
 
 }
   
